--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
     "sass": "^1.26.10"
   },
   "scripts": {
