--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.8",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "sass": "^1.26.10"
+    "sass": "^1.26.10",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
