--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "node-sass": "4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-navi": "^0.14.4",
     "react-redux": "7.0.3",
     "react-router-dom": "5.0.0",
     "react-stripe-checkout": "2.6.3",
